# test-example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  run.sh
db/: run_migrations.py  schema.sql
db/migrations/: 20240328170153_init.sql
src/: app.py
src/api/: enums.py  session.py
src/api/crud/: user.py
src/api/dependencies/: auth.py  transaction.py
src/api/endpoints/: router.py
src/api/endpoints/internal/: router.py  user.py
src/api/endpoints/schemas/: user.py
src/api/models/: user.py
src/core/: conf.py
src/core/settings/: aws.py  base.py  local.py  test.py
tests/: conftest.py  factories.py
tests/test_routes/: test_user.py
